--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 <script src="web/kotlin.js"></script>
 <script src="web/kotlinx-coroutines-core.js"></script>
-<script src="web/pathalgorithm2.js"></script>
+<script src="web/pathalgorithm.js"></script>
 <script>
-    pathalgorithm2.Bootstrap.bootstrapJS()
+    pathalgorithm.Bootstrap.bootstrapJS()
 </script>
 </body>
 </html>
