fix deployment issues

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <script src="web/kotlin.js"></script>
 <script src="web/kotlinx-coroutines-core.js"></script>
-<script src="web/pathalgorithm.js"></script>
+<script src="web/path-algorithm.js"></script>
 <script>
     pathalgorithm.Bootstrap.bootstrapJS()
 </script>
