fix deployment issues

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <script src="web/kotlinx-coroutines-core.js"></script>
 <script src="web/path-algorithm.js"></script>
 <script>
-    pathalgorithm.Bootstrap.bootstrapJS()
+    window['path-algorithm'].Bootstrap.bootstrapJS()
 </script>
 </body>
 </html>
