--- a/index.html
+++ b/index.html
@@ -49,12 +49,15 @@
     </div>
     <canvas id="maze" width="0" height="0"></canvas>
     <div style="position: relative">
-        <div class="legendDescription emptyTile">Empty</div>
         <div class="legendDescription startTile">Start</div>
         <div class="legendDescription goalTile">Goal</div>
-        <div class="legendDescription watchedTile">Watched</div>
-        <div class="legendDescription visitedTile">Visited</div>
         <div class="legendDescription wallTile">Wall</div>
+        <div class="legendDescription emptyTile">Empty</div>
+        <div class="legendDescription emptyWatchedTile">Watched</div>
+        <div class="legendDescription emptyVisitedTile">Visited</div>
+        <div class="legendDescription mudTile">Mud</div>
+        <div class="legendDescription mudWatchedTile">Watched (Mud)</div>
+        <div class="legendDescription mudVisitedTile">Visited (Mud)</div>
 
         <canvas id="legend" width="0" height="0"></canvas>
     </div>
