--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <div class="legendDescription emptyWatchedTile">Watched</div>
         <div class="legendDescription emptyVisitedTile">Visited</div>
         <div class="legendDescription mudTile">Mud</div>
-        <div class="legendDescription mudWatchedTile">Watched (Mud)</div>
-        <div class="legendDescription mudVisitedTile">Visited (Mud)</div>
+        <div class="legendDescription mudWatchedTile">Watched (Mud +2 cost)</div>
+        <div class="legendDescription mudVisitedTile">Visited (Mud +2 cost)</div>
 
         <canvas id="legend" width="0" height="0"></canvas>
     </div>
